# Optimizition-Algorithms

./: .gitignore  pyproject.toml
optimizition_algorithms/: ex1.py  ex2.py
