[tool.poetry]
name = "optimizition-algorithms"
version = "0.1.0"
description = ""
authors = ["Otávio Almeida <otavioalmeida650@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12,<3.13"
pyomo = {extras = ["optional"], version = "^6.6.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
